syntax = "proto3";

package tally.v1;

option go_package = "github.com/runar-rkmedia/gotally/gen/proto/tally/v1;tallyv1";

/* # import "google/type/datetime.proto"; */

// Direction for swipe, e.g. the direction one wants to move all the cells into
enum SwipeDirection {
  // null
  SWIPE_DIRECTION_UNSPECIFIED = 0;
  // Swipe up
  SWIPE_DIRECTION_UP = 1;
  // Swipe right
  SWIPE_DIRECTION_RIGHT = 2;
  // Swipe down
  SWIPE_DIRECTION_DOWN = 3;
  // Swipe left
  SWIPE_DIRECTION_LEFT = 4;
}
enum GameMode {
  GAME_MODE_UNSPECIFIED = 0;
  // Cells are generated randomly at start, and each swipe adds another cell to
  // the board.
  GAME_MODE_RANDOM = 1;
  // Tutorial-like. Can be indexed to start at a specific board.
  GAME_MODE_TUTORIAL = 2;
  GAME_MODE_RANDOM_CHALLENGE = 3;
}
enum Difficulty {
  DIFFICULTY_UNSPECIFIED = 0;
  DIFFICULTY_EASY = 1;
  DIFFICULTY_MEDIUM = 2;
  DIFFICULTY_HARD = 3;
}
// Cell is single value on the board. The value can then be calculated with base
// * 2^twopow
message Cell {
  // Base-value
  int64 base = 1;
  // Pow-value
  int64 twopow = 2;
  /* string id = 3; */
}

message InternalDataHistory {
  uint64 state = 1;
  Instruction instruction = 2;

  repeated int64 cells = 3;
}
message InternalDataGame {
  uint64 state = 1;
  uint64 seed = 2;
  repeated int64 cells = 3;
}
message Board {
  repeated Cell cells = 1;
  uint32 columns = 2;
  uint32 rows = 3;
  string name = 4;
  string id = 5;
}

message Instruction {
  oneof instruction_oneof {
    SwipeDirection swipe = 1;
    Indexes combine = 2;
    bytes bytes = 3;
  }
}

enum HintPreference {
  HINT_PREFERENCE_UNSPECIFIED = 0;
  // Returns the shortest hint, counting swipes and combines.
  HINT_PREFERENCE_SHORT = 2;
  // Returns the hint calculated as giving the highest score
  HINT_PREFERENCE_HIGHEST_SCORE = 3;
  // Returns the hint that has the least amount of swipes.
  HINT_PREFERENCE_MINIMUM_SWIPES = 4;
  // Return the hint that has the lowest swipes to combine ratio
  HINT_PREFERENCE_MINIMUM_SWIPES_TO_COMBINE_RATIO = 5;
  // Return the hint that has the first hint of type combine
  HINT_PREFERENCE_FIRST_COMBINE = 6;
}

message GetHintRequest {
  HintPreference hint_preference = 1;
  uint32 max_length = 2;
}
message UndoRequest {
}
message UndoResponse {
  Board board = 1;
  int64 score = 2;
  int64 moves = 4;
}
message GetHintResponse { repeated Instruction instructions = 1; }
message GetSessionRequest {}
message RestartGameRequest {}
message NewGameRequest {
  GameMode mode = 1;
  oneof variant {
    Difficulty difficulty = 2;
    uint32 level_index = 3;
    string id = 4;
  }
}
message NewGameFromTemplateRequest {
  uint32 ideal_moves = 1;
  uint32 ideal_score = 2;
  uint64 target_cell_value = 3;
  uint32 columns = 4;
  uint32 rows = 5;
  string name = 6;
  string description = 7;
  repeated Cell cells = 8;
}
message RestartGameResponse {
  Board board = 1;
  int64 score = 2;
  int64 moves = 3;
}

message GetSessionResponse { Session session = 1; }
message NewGameResponse {
  Board board = 1;
  int64 score = 2;
  int64 moves = 3;
  string description = 4;
  GameMode mode = 5;
}
message NewGameFromTemplateResponse {
  Board board = 1;
  int64 score = 2;
  int64 moves = 3;
  string description = 4;
  GameMode mode = 5;
}

message SwipeBoardRequest { SwipeDirection direction = 2; }
message SwipeBoardResponse {
  // Indicates whether or not any change was made.
  // This can happen in these scenarios:
  // 1. The board is full.
  // 2. Cell-generating is not active and
  //    - All the bricks in the direction of which is beeing swiped is already
  //    stacked at that edge
  //
  // This may be expanded upon with future gamemodes.
  bool did_change = 1;
  bool did_win = 2;
  bool did_lose = 3;
  Board board = 4;
  int64 moves = 5;
}

message Coordinate {
  uint32 x = 1;
  uint32 y = 2;
}

message Indexes { repeated uint32 index = 1; }
message SelectionCoordinates { repeated Coordinate coordinate = 1; }

message CombineCellsRequest {
  oneof selection {
    Indexes indexes = 1;
    Coordinate coordinate = 2;
  }
}
message CombineCellsResponse {
  Board board = 1;
  int64 score = 2;
  int64 moves = 3;
  bool did_win = 4;
  bool did_lose = 5;
}

enum Vote {
  VOTE_UNSPECIFIED = 0;
  VOTE_TERRIBLE_1 = 1;
  VOTE_BAD_2 = 2;
  VOTE_OK_3 = 3;
  VOTE_GOOD_4 = 4;
  VOTE_GREAT_5 = 5;
}

message VoteBoardRequest {
  string user_name = 2;
  // How fun the board is to play
  Vote fun_vote = 3;
}
message VoteBoardResponse {
  string id = 1;
  Vote fun_vote = 2;
}

message Game {
  Board board = 1;
  int64 score = 2;
  int64 moves = 4;
  GameMode mode = 5;
  string description = 6;
  PlayState playState = 7;
}

enum PlayState {
    PLAYSTATE_UNSPECIFIED = 0;
    PLAYSTATE_CURRENT= 1;
    PLAYSTATE_WON = 2;
    PLAYSTATE_LOST = 3;
    PLAYSTATE_ABANDONED = 4;
  }

message Session {
  Game game = 1;
  string session_id = 2;
  string username = 3;
  int64 games_played = 4;
}

enum GeneratorAlgorithm {
  GENERATOR_ALGORITHM_UNSPECIFIED = 0;
  // A slow algorithm which attempts to generate games by randomization
  // Very slow for larger values, or more advanced games
  GENERATOR_ALGORITHM_RANDOMIZED = 1;
  // A faster algorithm that works in reverse. 
  // The games generated can be a bit monotomous.
  GENERATOR_ALGORITHM_REVERSE = 2;
}

message GenerateGameRequest {
	uint32 rows  = 1;
  uint32 columns      =2;
	uint64 target_cell_value     =3;
	uint32 max_bricks           =4;
	uint64 min_moves            =6;
	uint64 max_moves            =7;
	uint64 max_additional_cells       =8;
	uint64 random_cell_chance       =9;
  uint64 seed = 10;
  uint64 salt = 11;
  bool with_solutions = 12;
  GeneratorAlgorithm algorithm = 13;
}
message GenerateGameResponse {
  Game game = 1;
  uint32 ideal_moves = 2;
  uint64 ideal_score = 3;
  uint64 highest_score = 4;
  repeated Game solutions = 5;
  GameStats stats = 6;
}


message GetGameChallengesRequest {
}
message GetGameChallengesResponse {
  repeated GameChallenge challenges = 1;
}

message GameChallenge {
  string id = 1;
  uint32 challenge_number = 2;
  uint32 ideal_moves = 3;
  uint64 ideal_score = 4;
  uint64 target_cell_value = 5;
  uint32 columns = 6;
  uint32 rows = 7;
  string name = 8;
  string description = 9;
  repeated Cell cells = 10;
  uint64 current_users_best_score = 11;
  uint32 current_users_fewest_moves = 12;
  // Current rating the user has for the challenge, if played and solved.
  Rating rating = 13;
  // Indicated that the challenge is locked.
  bool locked = 14;

}

enum Rating {
  RATING_UNSPECIFIED = 0;
  RATING_UNPLAYED = 1;
  RATING_OK= 20;
  RATING_WELL = 40;
  RATING_GOOD = 60;
  RATING_GREAT = 80;
  RATING_SUPERB = 100;
  RATING_BEYOND = 120;
  }


message CreateGameChallengeRequest {
  uint32 challenge_number = 1;
  uint32 ideal_moves = 2;
  uint32 ideal_score = 3;
  uint64 target_cell_value = 4;
  uint32 columns = 5;
  uint32 rows = 6;
  string name = 7;
  string description = 8;
  repeated Cell cells = 9;
}
message CreateGameChallengeResponse {
  string id = 1;
  uint32 challenge_number = 2;
}

message GameStats  {
	// List of unique factors across all cells
    repeated uint64 unique_factors = 1;
	// List of unique values across all cells
    repeated uint64 unique_values = 2;
	// Count of duplicate factors
    uint64 duplicate_factors = 3;
	// Count of duplicate values
    uint64 duplicate_values = 4;
	// Cells with value (non-empty)
    uint64 with_value_count = 5;
	// Total number of cells
    uint64 cell_count = 6;
	// Unique hints at start
    uint64 unique_hints = 7;
	// Hints at start
  repeated Instruction hints = 8;
  uint32 ideal_moves_solution_index = 9;
  uint32 max_score_solution_index = 10;
  uint32 ideal_moves = 11;
  uint64 score_on_ideal = 12;
  uint64 max_score = 13;
  repeated SolutionStat solution_stats = 14;
  }
message SolutionStat {
  uint32 moves = 1;
  uint64 score = 2;
  repeated InstructionTag instruction_tag = 3;
}
message InstructionTag {
  bool ok = 1;
  bool is_multiplication = 2;
  bool is_addition = 3;
  bool is_swipe = 4;
  uint64 two_pow = 5;
}

service BoardService {
  rpc NewGame(NewGameRequest) returns (NewGameResponse) {}
  rpc NewGameFromTemplate(NewGameFromTemplateRequest) returns (NewGameFromTemplateResponse) {}
  rpc GetHint(GetHintRequest) returns (GetHintResponse) {}
  rpc Undo(UndoRequest) returns (UndoResponse) {}
  rpc RestartGame(RestartGameRequest) returns (RestartGameResponse) {}
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse) {}
  rpc SwipeBoard(SwipeBoardRequest) returns (SwipeBoardResponse) {}
  rpc CombineCells(CombineCellsRequest) returns (CombineCellsResponse) {}
  rpc GenerateGame(GenerateGameRequest) returns (GenerateGameResponse) {}
  rpc VoteBoard(VoteBoardRequest) returns (VoteBoardResponse) {}
  rpc GetGameChallenges(GetGameChallengesRequest) returns (GetGameChallengesResponse) {}
  rpc CreateGameChallenge(CreateGameChallengeRequest) returns (CreateGameChallengeResponse) {}
}
